--- a/style.css
+++ b/style.css
@@ -1,26 +1,43 @@
-.header{
-    background-color: black;
+header{
+    color: rgba(255, 140, 0, 0.828);
+    font-size: 30px;
+    background-color: blanchedalmond;
 }
-.h1{
-    color: white;
-    font-family: sans-serif;
-    font-size: 10px;
-    text-align: left;
-       
+.title{
+    color: forestgreen;
+    font-size: 35px;
 }
-.izquierda {
-    margin-left: 10px;
-    float: center,left;
-    width: 15px;
-    height:15px;
+p{
+    color: darkgreen;
+    font-size: 20px;
 }
-.derecha {
-    margin-right: 10px;
-    float: right;
-    width: 13px;
-    height:13px;
+h2{
+color: coral;
+font-size: 30px;
 }
-.button{
-    background-color: rgb(68, 205, 68);
-    border-radius: 15px;
+.preparacion{
+    color: olivedrab;
+    font-size: 30px;
+}
+ul{
+    color: coral;
+    font-size: 20px;
+    list-style: none;
+}
+figcaption{
+    color: rgba(1, 196, 11, 0.765);
+    font-size: 20px;
+}
+ol{
+    color: olivedrab;
+    font-size: 20px;
+}
+h3{
+    color: rgb(8, 100, 3);
+font-size: 30px;
+}
+span
+{
+    color: olivedrab;
+    font-size: 18px;
 }
